# gsl-example

./: .gitignore  README.md  main.c  meson.build  requirements.txt  setup.py
app/: main.c  meson.build
example/: .gitignore  cexample.pxd  cglib.pxd  example.pyx
include/: example.h
lib/: meson.build
python/: .gitignore  cexample.pxd  example.pyx  setup.py
src/: example.c  meson.build
